# CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tasks.json
cli/: __init__.py  main.py
cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
